// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Container should render Default 1`] = `
<DocumentFragment>
  <footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      />
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer Container should render WithClassName 1`] = `
<DocumentFragment>
  <footer
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      />
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer Container should render WithEmotion 1`] = `
<DocumentFragment>
  <footer
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      />
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
